kubernetes/apps/app-cluster/media/prowlarr/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-internal
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
    gethomepage.dev/description: "Indexer aggregation (internal)"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "http://prowlarr.krapulax.home"
    gethomepage.dev/icon: "prowlarr.png"
    gethomepage.dev/name: "Prowlarr (internal)"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - prowlarr.krapulax.home
  rules:
    - backendRefs:
        - name: prowlarr
          namespace: media
          port: 9696
