kubernetes/apps/app-cluster/media/prowlarr/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prowlarr.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Prowlarr
    gethomepage.dev/icon: prowlarr.png
    gethomepage.dev/description: Indexer aggregation
    gethomepage.dev/weight: "60"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - prowlarr.krapulax.dev
  rules:
    - backendRefs:
        - name: prowlarr
          namespace: media
          port: 9696
